--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
   "name": "my-porfolio-common-library",
   "version": "0.1.0",
-  "private": true,
+  "main": "dist/index.js",
+  "private": false,
+  "files": [ "dist", "README.md" ],
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/vuquangkhtn/my-porfolio-common-library"
+  },
+  "author": "Quang Nguyen",
+  "license": "MIT",
+  "source": "src/index.jsx",
+  "bugs": {
+    "url": "https://github.com/vuquangkhtn/tfs-common-library/issues"
+  },
+  "homepage": "https://github.com/vuquangkhtn/tfs-common-library#readme",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "react-scripts": "5.0.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,7 +34,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public","clean": "rimraf dist",
+    "compile": "npm run clean && cross-env NODE_ENV=production babel src/components --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.jsx,__snapshots__"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +66,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
@@ -56,6 +77,7 @@
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.9",
+    "cross-env": "^7.0.3",
     "webpack": "^5.65.0"
   }
 }
