config to pubish

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "my-porfolio-common-library",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "main": "dist/index.js",
   "private": false,
-  "files": [ "dist", "README.md" ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": {
-      "type": "git",
-      "url": "https://github.com/vuquangkhtn/my-porfolio-common-library"
+    "type": "git",
+    "url": "https://github.com/vuquangkhtn/my-porfolio-common-library"
   },
   "author": "Quang Nguyen",
   "license": "MIT",
-  "source": "src/index.jsx",
+  "source": "src/index.js",
   "bugs": {
     "url": "https://github.com/vuquangkhtn/tfs-common-library/issues"
   },
@@ -21,7 +24,8 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -34,7 +38,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public","clean": "rimraf dist",
+    "build-storybook": "build-storybook -s public",
+    "clean": "rimraf dist",
     "compile": "npm run clean && cross-env NODE_ENV=production babel src/components --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.jsx,__snapshots__"
   },
   "eslintConfig": {
