--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-porfolio-common-library",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "main": "dist/index.js",
   "private": false,
   "files": [
@@ -33,12 +33,9 @@
     "react-scripts": "5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
+    "build": "build-storybook -c .storybook -s public",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
